# TODO-APP-FASTAPI

./: .gitignore  README.md  prestart.py  pyproject.toml
app/: backend_pre_start.py  main.py
app/api/routers/: auth.py  task.py  todo_list.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_task.py  crud_todo_list.py
app/db/: base.py  init_db.py
app/models/: task.py  todo_list.py  user.py
app/schemas/: __init__.py  task.py  todo_list.py  user.py
