[tool.poetry]
name = "Todo API"
version = "0.0.1"
description = "University project"
authors = ["Kyrylo Korablov"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "~0.11.3"
fastapi = "~0.68.0"
python-multipart = "~0.0.5"
pydantic = {extras = ["email"], version = "~1.8.1"}
Jinja2 = "~3.0.1"
SQLAlchemy = "~1.4.3"
tenacity = "~8.0.1"
httpx = "~0.18.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cffi = "^1.15.0"
